<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Studnet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="studnet">Studnet</string>
    <string name="login">Login</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_list_user">ListUser</string>
    <string name="title_activity_single_user">SingleUser</string>
    <string name="title_activity_user_profile">UserProfile</string>

</resources>
